# PsyonicIsaacLabDemo

./: .README.md.swp  .gitignore  GTC_README.txt  LICENSE  README.md  start_GTC_demo.sh  start_IL_Demo.sh  start_Real2Sim_Demo.sh
URDF/: test_env.usd
URDF/ability_hand_left_large/configuration/: ability_hand_left_large_physics.usd  ability_hand_left_large_robot.usd
URDF/ability_hand_left_small/: ability_hand_left_small.usd
URDF/ability_hand_left_small/configuration/: ability_hand_left_small_base.usd
URDF/ability_hand_right_large/: ability_hand_right_large.usd
URDF/ability_hand_right_small/: ability_hand_right_small.usd
URDF/ability_hand_right_small/configuration/: ability_hand_right_small_base.usd  ability_hand_right_small_physics.usd
USD_assets/: beaker_500ml.usd  psyonic_UR_left_playground.usd  psyonic_UR_right_playground.usd  psyonic_UR_straight.usd  ur5e_test.usd
psyonic_ros2_ws/: .start_IL_DEMO_ROS.sh.swp  requirements.txt  start_GTC_demo.sh  start_IL_DEMO.sh  start_IL_DEMO_ROS.sh  start_IL_real2sim.sh
psyonic_ros2_ws/IL_ROS_env/: pyvenv.cfg
psyonic_ros2_ws/install/: local_setup.sh  setup.sh
psyonic_ros2_ws/launch/: IL_demo_launch.py  gtc_demo_launch.py
psyonic_ros2_ws/log/: latest_build
psyonic_ros2_ws/src/HIL_feedback/: setup.cfg  (+2 more)
psyonic_ros2_ws/src/manus_haply_teleop/: package.xml  setup.cfg  setup.py
psyonic_ros2_ws/src/manus_haply_teleop/manus_haply_teleop/: inverse3_manus_pub.py
psyonic_ros2_ws/src/real2sim/: package.xml  setup.cfg  setup.py
psyonic_ros2_ws/src/real2sim/real2sim/: real2sim_script.py
psyonic_scripts/: arm_listener.py  gtc_demo.py  hand_listener.py  pickup_cup.py  pickup_cup_isaaclab.py  real2sim.py
(+34 files in other folders)
